# football-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  simulate_match.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: matches.py  monitoring.py  system.py
app/clients/: espn.py  telegram.py
app/core/: config.py
app/models/: __init__.py  match.py  match_event.py  monitoring_fetch.py  player.py  team.py
app/monitoring/: __init__.py  coordinator.py  policy.py
app/services/: matches.py
app/simulation/: __init__.py  replay.py
tests/: test_espn.py  test_main.py  test_match_service.py  test_monitor_policy.py  test_replay.py  test_telegram.py
